--- a/calculator-app/src/app/page.module.css
+++ b/calculator-app/src/app/page.module.css
@@ -1,3 +1,8 @@
+.tittle{
+  font-size: 4rem;
+  text-align: center;
+}
+
 .main {
   display: flex;
   flex-direction: column;
@@ -5,6 +10,50 @@
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
+}
+
+.maincenter{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 6rem;
+  min-height: 100vh;
+}
+
+.inputgroup {
+  margin-bottom: 20px;
+}
+
+.label {
+  display: block;
+  font-weight: bold;
+}
+
+.input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.submit {
+  background-color: #007BFF;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 100%;
+
+}
+
+
+.formlogin{
+  width: 100%;
+  max-width: 500px;
+  margin: auto;
+  padding: 20px;
 }
 
 .description {
