--- a/calculator-app/src/app/page.module.css
+++ b/calculator-app/src/app/page.module.css
@@ -3,13 +3,121 @@
   text-align: center;
 }
 
+.tittleSelectOperation{
+  font-size: 2rem;
+  text-align: center;
+}
+
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
+}
+
+.mainSection{
+  display: flex;
+  flex-wrap:wrap;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content:space-around;
+  padding: 2rem;
+  width: 100%;
+}
+
+.tablerecords{
+  width: 55%;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  min-width: 500px;
+}
+
+.operations{
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  height: 100%;
+  justify-content:flex-start
+}
+
+.formfilter{
+  display: flex;
+  flex-direction: column;
+}
+
+.filterfield{
+  display: flex;
+  flex-direction: row;
+
+}
+
+.fieldFilter{
+  width: 45%;
+  margin-left: 1rem;
+}
+
+.customSelect{
+  width: 100%; 
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-top: 2rem;
+
+}
+
+.showOperation{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2rem;
+  margin-right: 2rem;
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.cost{
+  margin-top: 2rem;
+  width: 100%;
+}
+
+.showResults{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.paginationContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.paginationContainer span {
+  font-size: 1.2rem;
+  margin: 0 10px;
+}
+
+.spacetable{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.paginationContainer .Button {
+  background-color: #007bff; /* Color de fondo del botón */
+  color: #fff; /* Color del texto del botón */
+  padding: 8px 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.paginationContainer .Button:hover {
+  background-color: #0056b3; /* Cambia el color de fondo en el hover */
 }
 
 .maincenter{
@@ -47,6 +155,14 @@
   width: 100%;
 
 }
+
+.inputOperation{
+  width: 100%;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+
 
 
 .formlogin{
